Fixed jumping in FAQs

--- a/studionilo_website/home/static/home/css/nilo.css
+++ b/studionilo_website/home/static/home/css/nilo.css
@@ -499,6 +499,7 @@ tr.nilo-table-gains>td {
 
 tr.nilo-table-gains>td>div.wrapper {
     display: none;
+    padding-bottom: 1em;
 }
 
 .nilo-col-left {
